--- a/foundations/04-chaining-selectors/style.css
+++ b/foundations/04-chaining-selectors/style.css
@@ -1,3 +1,9 @@
-.avatarproportioned {
-
-}
+.avatar.proportioned {
+    height: auto;
+    width: 300px;
+  }
+  
+  .avatar.distorted {
+    height: 400px;
+    width: 200px;
+  }
